--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -25,8 +25,23 @@
 
 .alert {
     padding: 5px 10px;
+    display:flex;
+    align-items: center;
+    max-height: 40px;
 }
-
+.alert button{
+    padding: 5px !important;
+}
+.navbar {
+    background-color:#FFF !important;
+    box-shadow: 1px 0px 3px rgba(68,68,68,0.6);
+}
+.navbar .nav-link{
+    color:#000 !important;
+}
+.navbar .nav-link:hover{
+    color:#005cbf !important;
+}
 .navbar form input{
     background:none;
     border:none;
@@ -41,8 +56,6 @@
     background-color:#5e60ce;
     color:#FFF;
     text-align: center;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
 }
 
 .table tr {
@@ -62,4 +75,153 @@
 }
 .table tr th, .table tr td {
     border:1px solid #FFF;
+}
+
+.hide {
+    display:none;
+}
+
+.my-btn {
+    padding: 2px 8px;
+}
+
+
+.my-breadcrumb {
+    display: flex;
+    justify-content: flex-start;
+}
+.my-breadcrumb .my-breadcrumb-item {
+    display:flex;
+    align-items: center;
+    text-decoration: none;
+    padding:10px 0;
+}
+.my-breadcrumb .active {
+    text-decoration: none;
+    color:#333;
+    border:none;
+}
+.my-breadcrumb .my-breadcrumb-text {
+    margin: 0 5px;
+    padding:3px 5px;
+}
+
+.my-card {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.my-card:hover {
+    cursor: pointer;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.my-card .my-card-image {
+    display:flex;
+    width:250px;
+    min-width: 250px;
+    height:250px;
+    margin:0 20px 0 0;
+}
+.my-card .my-card-image img {
+    width:100%;
+    height:100%;
+}
+
+.my-card .my-card-body .my-card-title a{
+    text-decoration: none;
+}
+.my-card .my-card-body .my-card-title a:hover{
+    text-decoration: none;
+    color:#005cbf;
+}
+.my-card .my-card-body .author {
+    margin:5px 0 15px;
+    font-size: 15px;
+}
+.my-card .my-card-body .author span {
+    background-color: #769AF4;
+    color:#FFF;
+    padding:3px 8px;
+    border-radius: 3px;
+}
+.content {
+    min-height: calc(100vh - 100px);
+}
+.article {
+    display:flex;
+    flex-direction: column;
+}
+.article .article-img {
+    height:500px;
+    margin:50px auto;
+}
+.article .author {
+    font-size: 18px;
+    font-weight: 600;
+    padding:5px 0;
+}
+footer {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height:50px;
+    background-color: #1b1e21;
+    color:#FFF;
+    font-size:15px;
+    margin-top: 50px;
+}
+.v-card-container {
+    display:flex;
+    justify-content: space-between;
+    margin:50px;
+}
+.v-card {
+    min-width: 300px;
+    height:80px;
+    padding:7px;
+    border:1px solid #EEE;
+    border-radius: 5px;
+    display:grid;
+    grid-template-columns: 80px 1fr;
+    grid-column-gap: 15px;
+    background-color: #FFF;
+    box-shadow: 0 0 1px rgba(0,0,0,.125), 0 1px 3px rgba(0,0,0,.2);
+    text-decoration: none;
+}
+.v-card:hover{
+    cursor: pointer;
+    text-decoration: none;
+}
+.v-card .icon {
+    background-color: #17A2B8;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.v-card .icon i {
+    color:#FFF;
+    font-size:35px;
+}
+.v-card:hover .icon i{
+    transform: scale(1.1);
+    transition: all 0.4s ease-in;
+}
+.v-card .v-card-body {
+    display:flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: center;
+    font-family: Roboto;
+}
+.v-card .v-card-body span {
+    margin:5px 0;
+    font-size:16px;
+}
+.v-card .v-card-body span:last-child {
+    font-weight: 600;
 }
