--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -108,7 +108,6 @@
 
 .my-card {
     display:flex;
-    justify-content: space-between;
     align-items: center;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -130,7 +129,6 @@
     width:100%;
     height:100%;
 }
-
 .my-card .my-card-body .my-card-title a{
     text-decoration: none;
 }
@@ -142,11 +140,24 @@
     margin:5px 0 15px;
     font-size: 15px;
 }
-.my-card .my-card-body .author span {
+.my-card .my-card-body .foot {
+    height:40px;
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 10px;
+}
+.badge {
+    font-size: 14px;
     background-color: #769AF4;
     color:#FFF;
-    padding:3px 8px;
+    padding:5px 8px;
     border-radius: 3px;
+    margin: 0 3px;
+    text-decoration: none;
+}
+.badge:hover {
+    color:#FFF;
 }
 .content {
     min-height: calc(100vh - 100px);
